add locales to controllers

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -78,4 +78,12 @@ ru:
         delete: Удалить профиль
         delete_confirm: Вы точно уверены, что хотите удалить данный профиль?
         no_meetings: Данный пользователь еще не создал событий
-
+    
+    controllers:
+      all:
+        error: Что-то пошло не так.
+      meetings:
+        destroy: Успешно удаленно.
+        create: Сохраннено.
+      users:
+        destroy: Ваш аккаунт успешно удален.
