add comments model

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -79,6 +79,8 @@ ru:
         delete_confirm: Вы точно уверены, что хотите удалить данный профиль?
         no_meetings: Данный пользователь еще не создал событий
     
+    comments:
+      delete_confirm: Вы точно хотите удалить данный комментарий?
     controllers:
       all:
         error: Что-то пошло не так.
@@ -87,3 +89,6 @@ ru:
         create: Сохраннено.
       users:
         destroy: Ваш аккаунт успешно удален.
+      comments:
+        create: 'Ваш комментарий добавлен'
+        destroy: 'Комментарий удален'
