add avatar to users

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -11,6 +11,7 @@ ru:
       user:
         email: Email
         nickname: Никнейм
+        avatar: 'Аватарка'
         password: Пароль
         password_confirmation: Подтверждение пароля
       meeting:
