delete photo button add

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -69,6 +69,7 @@ ru:
         comments: "Комментарии:"
         sub: Подписаться
         photos: "Фотографии:"
+        photo_delete_confirm: Вы точно уверены, что хотите удалить данную фотографию?
       new:
         title: Создание события
         back: Назад
