small locale fix

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -82,7 +82,7 @@ ru:
     users:
       edit:
         title: Редактировать профиль
-        submit: Создать
+        submit: Сохранить
         back: Назад к профилю
       show:
         edit: Редактировать профиль
